working pic-box animations, new font for sqft and play-again, fixed sqft icon spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,8 +6,8 @@ body {
     // z-index: 1;
     margin: 0;
     padding: 0;
-    background-image: url('http://www.thehomespun.com/wp-content/uploads/2012/08/one-side-of-house-early-august-1024x657.jpg');
-    // background-image: url('http://2.bp.blogspot.com/-ZziIeSCjOzs/UJaMZ1goYRI/AAAAAAAADOc/qA7ajYA2Ahw/s1600/wood-shake+siding+1.jpg');
+    // background-image: url('http://www.thehomespun.com/wp-content/uploads/2012/08/one-side-of-house-early-august-1024x657.jpg');
+    background-image: url('http://2.bp.blogspot.com/-ZziIeSCjOzs/UJaMZ1goYRI/AAAAAAAADOc/qA7ajYA2Ahw/s1600/wood-shake+siding+1.jpg');
     // background-image: url('http://www.photos-public-domain.com/wp-content/uploads/2012/03/weathered-shake-shingles-texture.jpg');
     // background-image: url('http://cdn.freshome.com/wp-content/uploads/2013/08/selling-your-home-cedar-shingle-home.jpg');
     background-size: cover;
@@ -183,6 +183,7 @@ body {
     padding: 21px 21px 0px 21px;
     width: 360px;
     height: 270px;
+    min-height: 230px;
     // border-radius: 6px;
         img {
             display: block;
@@ -211,6 +212,8 @@ body {
 }
 
 .play-again {
+    font-family: 'Merriweather Sans', sans-serif;
+    line-height: 36px;
     text-align: center;
 }
 
@@ -237,6 +240,8 @@ body {
     bottom: 39px;
     margin: 0px 20px 30px;
     width: 90%;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 24px;
     border-bottom: 2px solid #6c6c6c;
         img {
             margin: 0px 15px -2px 0px;
@@ -248,6 +253,11 @@ body {
     bottom: -5px;
     margin: 15px 20px;
     width: 90%;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 24px;
+        img {
+            margin: 0px 10px 0px 4px;
+        }
 }
 
 .sqft {
